<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/no_picture_mode"
            android:key="no_picture_mode"
            android:defaultValue="false"
            android:summary="@string/no_picture_mode_description" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/in_app_browser"
            android:key="chrome_custom_tabs"
            android:defaultValue="true"
            android:summary="@string/in_app_browser_description" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/night_mode"
            android:key="night_mode"
            android:defaultValue="false" />

        <android.support.v7.preference.ListPreference
            android:title="@string/time_of_saving_articles"
            android:key="time_of_saving_articles"
            android:entries="@array/time_to_save_opts"
            android:entryValues="@array/time_to_save_values"
            android:defaultValue="7"/>

        <android.support.v7.preference.Preference
            android:title="@string/clear_image_cache"
            android:key="clear_glide_cache"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/about">

        <android.support.v7.preference.Preference android:title="@string/version" />

        <android.support.v7.preference.Preference android:title="@string/rate"
            android:key="rate"
            android:summary="@string/rate_description" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/author">

        <android.support.v7.preference.Preference
            android:title="@string/follow_me_on_github"
            android:key="follow_me_on_github"
            android:summary="@string/github_url"/>

        <android.support.v7.preference.Preference
            android:title="@string/follow_me_on_zhihu"
            android:key="follow_me_on_zhihu"
            android:summary="@string/zhihu_account"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/support">

        <android.support.v7.preference.Preference android:title="@string/feedback"
            android:key="feedback"
            android:summary="@string/feedback_description"/>

        <android.support.v7.preference.Preference android:title="@string/coffee"
            android:key="coffee"
            android:summary="@string/coffee_description"/>

        <android.support.v7.preference.Preference android:title="@string/open_source_licenses"
            android:key="open_source_license" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>