<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_bookmarks" />
    </group>

    <item android:title="other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />

        </menu>
    </item>

</menu>