<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_search_bookmarks"
        android:shortcutId="search_bookmarks"
        android:shortcutShortLabel="@string/search_bookmarks"
        android:shortcutLongLabel="@string/search_bookmarks">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.marktony.zhihudaily"
            android:targetClass="com.marktony.zhihudaily.SearchActivity" />

        <categories android:name="android.shortcut.conversation" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_random"
        android:shortcutId="feel_lucky"
        android:shortcutShortLabel="@string/feel_lucky_short"
        android:shortcutLongLabel="@string/feel_lucky">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.marktony.zhihudaily"
            android:targetClass="com.marktony.zhihudaily.SearchActivity" />

        <categories android:name="android.shortcut.conversation" />

    </shortcut>

</shortcuts>